--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "exceljs": "^4.4.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.13.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
